--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -18,22 +18,38 @@
     "import numpy as np\n",
     "import xgboost as xgb\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_selection import mutual_info_classif\n",
+    "from sklearn.preprocessing import OrdinalEncoder, LabelEncoder\n",
     "\n",
     "df_train = pd.read_csv('data/train.csv').drop(['id'], axis=1)\n",
+    "df_train['source'] = 'simulation'\n",
+    "\n",
     "df_test = pd.read_csv('data/test.csv')\n",
     "test_ids = df_test.id\n",
     "dt_test = df_test.drop(['id'], axis=1)\n",
+    "\n",
     "df_supp = pd.read_csv('data/cirrhosis.csv').drop(['ID'], axis=1)\n",
+    "df_supp['source'] = 'original'\n",
+    "\n",
     "# merge supplemental data\n",
     "df_train = pd.concat([df_train, df_supp]).reset_index(drop=True)\n",
-    "TARGET = 'Status'"
+    "train_target = df_train['Status']\n",
+    "\n",
+    "TARGET = 'Status'\n",
+    "SKEWED_FEATS = ['Bilirubin', 'Cholesterol', 'Copper', 'Prothrombin', 'Alk_Phos']\n",
+    "CAT_FEATS = ['Drug', 'Sex', 'Ascites', 'Hepatomegaly', 'Spiders', 'Edema', 'Stage']\n",
+    "NUM_FEATS = [x for x in df_train.columns if x not in CAT_FEATS and x != TARGET]\n",
+    "NUM_FEATS.remove('source')\n",
+    "ORIG_FEATS = df_train.drop(TARGET, axis=1).columns.tolist()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Prep Data for XGBoost"
+    "# Prep Data for XGBoost\n",
+    "\n",
+    "## Helper Functions"
    ]
   },
   {
@@ -42,19 +58,89 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# category dtype is needed\n",
-    "for col in df_train:\n",
-    "    if col.dtype() == object:\n",
-    "        df_train[col] = df_train[col].astype('category')\n",
+    "def log_transformation(data, skewed_features):\n",
+    "    df_log_feats = pd.DataFrame()\n",
+    "    for col in skewed_features:\n",
+    "        name = f'{col}_log'\n",
+    "        df_log_feats[name] = np.log(data[col])\n",
+    "    return df_log_feats\n",
     "\n",
+    "def encode(data):\n",
+    "    X_raw = data.dropna().copy()\n",
+    "    X_raw = X_raw.iloc[:, 0:18]\n",
+    "\n",
+    "    # encode the categorical features\n",
+    "    X_cat = X_raw[CAT_FEATS]\n",
+    "    X_num = np.array(X_raw[NUM_FEATS])\n",
+    "    oe = OrdinalEncoder()\n",
+    "    X_cat = oe.fit_transform(X_cat)\n",
+    "    X_cat = pd.DataFrame(X_cat, columns=CAT_FEATS)\n",
+    "    X_num = pd.DataFrame(X_num, columns=NUM_FEATS)\n",
+    "    return X_cat, X_num"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# create features and target arrays\n",
     "X, y = df_train.drop(TARGET, axis=1), df_train[[TARGET]]\n",
     "\n",
-    "# the target needs to be numerical for multiclass classification\n",
-    "# create a recode mapping\n",
-    "# they must be zero indexed\n",
-    "mapping = {'C': 0, 'CL': 1, 'D': 2}\n",
-    "y = y.replace(mapping).astype('int')"
+    "# encode features\n",
+    "X_cat, X_num = encode(X)\n",
+    "X = pd.concat([X_cat, X_num], axis=1)\n",
+    "\n",
+    "# encode target\n",
+    "le = LabelEncoder()\n",
+    "y_mi = le.fit_transform(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Transformations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# n symptoms\n",
+    "# recode edema \"S\" and \"Y\" to both indicate edema for the purpose of this count variable\n",
+    "X['Edema'] = np.where(X['Edema'] == 2, 1, X['Edema'])\n",
+    "X['N_Symptoms'] = X.Edema + X.Spiders + X.Ascites + X.Hepatomegaly\n",
+    "\n",
+    "# logarithmic transformations\n",
+    "def get_logs(data, skewed_features):\n",
+    "    X_log = X[skewed_features]\n",
+    "    other_feats = data.columns.difference(skewed_features).tolist()\n",
+    "    X_other = X[other_feats]\n",
+    "    X_log = log_transformation(X_log, skewed_features)\n",
+    "    return pd.concat([X_log, X_other], axis=1)\n",
+    "\n",
+    "X = get_logs(X, SKEWED_FEATS)\n",
+    "\n",
+    "# Age at Diagnosis\n",
+    "X['Dgns_Age'] = X['Age'] - X['N_Days']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Train/Test Split"
    ]
   },
   {
@@ -68,12 +154,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create regression matrices in XGBoost's data format"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create regression matrices in xboost's data format\n",
     "dtrain = xgb.DMatrix(X_train, y_train, enable_categorical=True)\n",
     "dtest = xgb.DMatrix(X_dev, y_dev, enable_categorical=True)"
    ]
@@ -92,23 +184,22 @@
    "outputs": [],
    "source": [
     "# define training function\n",
-    "def train(objective='multi:softprob', n_rounds=100, model_note=\"\", early_stopping_rounds=100):\n",
+    "def train(data=\"\", objective='multi:softprob', n_rounds=100, model_note=\"\", early_stopping_rounds=100):\n",
     "    # Define hyperparameters\n",
     "    params = {\n",
     "        # objective for multiclass classification.\n",
     "        # for regression it would be reg:squarederror, for example.\n",
     "        \"objective\": objective,\n",
     "        \"num_class\": 3,\n",
+    "        \"learning_rate\": .1,\n",
     "        \"tree_method\": \"hist\"} # optimization without a GPU\n",
     "\n",
-    "    # specify the names of the data for xgboost to use\n",
-    "    evals = [(dtrain, \"train\"), (dtest, \"validation\")]\n",
     "\n",
     "    model = xgb.train(\n",
     "    params=params,\n",
     "    dtrain=dtrain,\n",
     "    num_boost_round=n_rounds,\n",
-    "    evals=evals,\n",
+    "    evals=data,\n",
     "    early_stopping_rounds=early_stopping_rounds\n",
     "    )\n",
     "\n",
@@ -122,8 +213,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model_note = \"initial_fe\"\n",
+    "# specify the names of the data for xgboost to use\n",
+    "evals = [(dtrain, \"train\"), (dtest, \"validation\")]\n",
     "# baseline\n",
-    "train(model_note=\"first\")"
+    "train(data=evals, model_note=model_note)"
    ]
   },
   {
