partial wandb implementation

--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -166,15 +166,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dtrain = xgb.DMatrix(X_train, y_train, enable_categorical=True)\n",
-    "dtest = xgb.DMatrix(X_dev, y_dev, enable_categorical=True)"
+    "d_train = xgb.DMatrix(X_train, y_train, enable_categorical=True)\n",
+    "d_test = xgb.DMatrix(X_dev, y_dev, enable_categorical=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fit Model"
+    "# Fit Model\n",
+    "\n",
+    "## Define wandb sweep parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sweep_config = {\n",
+    "    \"method\": \"random\", # sweep method\n",
+    "    \"metric\": {\n",
+    "        \"name\": \"accuracy\",\n",
+    "        \"goal\": \"maximize\"\n",
+    "    },\n",
+    "    \"parameters\": {\n",
+    "        \"booster\": { # tree-based or linear functions?\n",
+    "            \"values\": [\"gbtree\", \"gblinear\"]\n",
+    "        },\n",
+    "        \"max_depth\": { # depth of individual trees\n",
+    "            \"values\": [3, 6, 9, 12]\n",
+    "        },\n",
+    "        \"learning_rate\": {\n",
+    "            \"values\": [0.1, 0.05, 0.2]\n",
+    "        },\n",
+    "        \"subsample\": { # the proportion of instances to take a sub-sample per iteration\n",
+    "            \"values\": [1, 0.5, 0.3] \n",
+    "        }\n",
+    "    }\n",
+    "}"
    ]
   },
   {
@@ -184,24 +215,26 @@
    "outputs": [],
    "source": [
     "# define training function\n",
-    "def train(data=\"\", objective='multi:softprob', n_rounds=100, model_note=\"\", early_stopping_rounds=100):\n",
+    "def train(data_train, data_dev, model_note, objective='multi:softprob', n_rounds=10_000, early_stopping_rounds=100, lr=.1):\n",
     "    # Define hyperparameters\n",
     "    params = {\n",
     "        # objective for multiclass classification.\n",
     "        # for regression it would be reg:squarederror, for example.\n",
     "        \"objective\": objective,\n",
+    "        \"learning_rate\": lr,\n",
     "        \"num_class\": 3,\n",
-    "        \"learning_rate\": .1,\n",
     "        \"tree_method\": \"hist\"} # optimization without a GPU\n",
-    "\n",
     "\n",
     "    model = xgb.train(\n",
     "    params=params,\n",
-    "    dtrain=dtrain,\n",
+    "    dtrain=data_train,\n",
     "    num_boost_round=n_rounds,\n",
     "    evals=data,\n",
     "    early_stopping_rounds=early_stopping_rounds\n",
     "    )\n",
+    "\n",
+    "    # get predictions on dev set\n",
+    "    y_pred = model.predict()\n",
     "\n",
     "    model.save_model(f'checkpoints/{model_note}_{time.time()}.json') \n",
     "    # with a categorical target, if its not json then it throws an error"
@@ -236,8 +269,8 @@
    "source": [
     "# to-do\n",
     "\n",
-    "1. checkpointing (maybe with wandb)\n",
-    "2. cross-validation"
+    "1. cross-validation\n",
+    "2. hyperparameter tuning"
    ]
   }
  ],
