--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import wandb\n",
-    "from xgboost import XGBClassifier\n",
+    "import xgboost as xgb\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.feature_selection import mutual_info_classif\n",
     "from sklearn.preprocessing import OrdinalEncoder, LabelEncoder\n",
@@ -42,7 +42,7 @@
     "CAT_FEATS = ['Drug', 'Sex', 'Ascites', 'Hepatomegaly', 'Spiders', 'Edema', 'Stage']\n",
     "NUM_FEATS = [x for x in df_train.columns if x not in CAT_FEATS and x != TARGET]\n",
     "NUM_FEATS.remove('source')\n",
-    "ORIG_FEATS = df_train.drop(TARGET, axis=1).columns.tolist()\n"
+    "ORIG_FEATS = df_train.drop(TARGET, axis=1).columns.tolist()"
    ]
   },
   {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,25 +165,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Failed to detect the name of this notebook, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Create sweep with ID: jbbh56vz\n",
-      "Sweep URL: https://wandb.ai/reeds-team/cirrhosis-xgb-sweeps/sweeps/jbbh56vz\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sweep_config = {\n",
     "    \"method\": \"random\", # sweep method\n",
@@ -193,17 +177,21 @@
     "    },\n",
     "    \"parameters\": {\n",
     "        \"booster\": { # tree-based or linear functions?\n",
-    "            \"values\": [\"gbtree\", \"gblinear\"]\n",
+    "            \"value\": 'gbtree'\n",
     "        },\n",
     "        \"max_depth\": { # depth of individual trees\n",
     "            \"values\": [3, 6, 9, 12]\n",
     "        },\n",
     "        \"learning_rate\": {\n",
-    "            \"values\": [0.1, 0.05, 0.2]\n",
+    "            'distribution': 'uniform',\n",
+    "            'min': 0,\n",
+    "            'max': .1,\n",
     "        },\n",
-    "        \"subsample\": { # the proportion of instances to take a sub-sample per iteration\n",
-    "            \"values\": [1, 0.5, 0.3] \n",
-    "        }\n",
+    "        #\"subsample\": { # the proportion of instances to take as a sub-sample per iteration\n",
+    "        #    'distribution': 'uniform',\n",
+    "        #    'min': .33,\n",
+    "        #    'max': 1\n",
+    "        #}\n",
     "    }\n",
     "}\n",
     "\n",
@@ -212,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,14 +217,16 @@
     "    wandb.init(config=config_defaults) # set defaults. They'll be over-ridden later.\n",
     "    config = wandb.config\n",
     "\n",
-    "    model = XGBClassifier(\n",
+    "    model = xgb.XGBClassifier(\n",
+    "        n_estimators=10_000,\n",
+    "        early_stopping_rounds=2,\n",
+    "        learning_rate=config.learning_rate,\n",
     "        booster=config.booster,\n",
     "        max_depth=config.max_depth,\n",
-    "        learning_rate=config.learning_rate,\n",
-    "        subsample=config.subsample,\n",
+    "        subsample=config.subsample\n",
     "    )\n",
     "    \n",
-    "    model.fit(X_train, y_train)\n",
+    "    model.fit(X_train, y_train, eval_set=[(X_dev, y_dev)])\n",
     "\n",
     "    # get predictions on dev set\n",
     "    y_pred = model.predict(X_dev)\n",
@@ -247,7 +237,7 @@
     "    print(f\"Accuracy: {accuracy:.0%}\")\n",
     "    wandb.log({\"accuracy\": accuracy})\n",
     "\n",
-    "    model.save_model(f'checkpoints/{config.booster}\"-\"{config.max_depth}\"-\"{config.learning_rate}\"-\"{config.subsample}\"-\"{time.time()}.json') \n",
+    "    #model.save_model(f'checkpoints/{config.booster}\"-\"{config.max_depth}\"-\"{config.learning_rate}\"-\"{config.subsample}\"-\"{time.time()}.json') \n",
     "    # with a categorical target, if its not json then it throws an error"
    ]
   },
@@ -255,238 +245,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mreedmerrill\u001b[0m (\u001b[33mreeds-team\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Agent Starting Run: nwa0zpi3 with config:\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \tbooster: gbtree\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \tlearning_rate: 0.05\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \tmax_depth: 12\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \tsubsample: 0.5\n",
-      "Failed to detect the name of this notebook, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "Tracking run with wandb version 0.16.1"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Run data is saved locally in <code>/home/reed/Projects/kaggle/cirrhosis/wandb/run-20231219_133513-nwa0zpi3</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/reeds-team/cirrhosis-xgb-sweeps/runs/nwa0zpi3' target=\"_blank\">dulcet-sweep-1</a></strong> to <a href='https://wandb.ai/reeds-team/cirrhosis-xgb-sweeps' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>Sweep page: <a href='https://wandb.ai/reeds-team/cirrhosis-xgb-sweeps/sweeps/jbbh56vz' target=\"_blank\">https://wandb.ai/reeds-team/cirrhosis-xgb-sweeps/sweeps/jbbh56vz</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View project at <a href='https://wandb.ai/reeds-team/cirrhosis-xgb-sweeps' target=\"_blank\">https://wandb.ai/reeds-team/cirrhosis-xgb-sweeps</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View sweep at <a href='https://wandb.ai/reeds-team/cirrhosis-xgb-sweeps/sweeps/jbbh56vz' target=\"_blank\">https://wandb.ai/reeds-team/cirrhosis-xgb-sweeps/sweeps/jbbh56vz</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run at <a href='https://wandb.ai/reeds-team/cirrhosis-xgb-sweeps/runs/nwa0zpi3' target=\"_blank\">https://wandb.ai/reeds-team/cirrhosis-xgb-sweeps/runs/nwa0zpi3</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 83%\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
-       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
-       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
-       "    </style>\n",
-       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>accuracy</td><td>▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>accuracy</td><td>0.82643</td></tr></table><br/></div></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run <strong style=\"color:#cdcd00\">dulcet-sweep-1</strong> at: <a href='https://wandb.ai/reeds-team/cirrhosis-xgb-sweeps/runs/nwa0zpi3' target=\"_blank\">https://wandb.ai/reeds-team/cirrhosis-xgb-sweeps/runs/nwa0zpi3</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Find logs at: <code>./wandb/run-20231219_133513-nwa0zpi3/logs</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Agent Starting Run: zl8h7um9 with config:\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \tbooster: gbtree\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \tlearning_rate: 0.1\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \tmax_depth: 3\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: \tsubsample: 0.5\n",
-      "Failed to detect the name of this notebook, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Ctrl + C detected. Stopping sweep.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "Tracking run with wandb version 0.16.1"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Run data is saved locally in <code>/home/reed/Projects/kaggle/cirrhosis/wandb/run-20231219_133530-zl8h7um9</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/reeds-team/cirrhosis-xgb-sweeps/runs/zl8h7um9' target=\"_blank\">proud-sweep-2</a></strong> to <a href='https://wandb.ai/reeds-team/cirrhosis-xgb-sweeps' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>Sweep page: <a href='https://wandb.ai/reeds-team/cirrhosis-xgb-sweeps/sweeps/jbbh56vz' target=\"_blank\">https://wandb.ai/reeds-team/cirrhosis-xgb-sweeps/sweeps/jbbh56vz</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View project at <a href='https://wandb.ai/reeds-team/cirrhosis-xgb-sweeps' target=\"_blank\">https://wandb.ai/reeds-team/cirrhosis-xgb-sweeps</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View sweep at <a href='https://wandb.ai/reeds-team/cirrhosis-xgb-sweeps/sweeps/jbbh56vz' target=\"_blank\">https://wandb.ai/reeds-team/cirrhosis-xgb-sweeps/sweeps/jbbh56vz</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run at <a href='https://wandb.ai/reeds-team/cirrhosis-xgb-sweeps/runs/zl8h7um9' target=\"_blank\">https://wandb.ai/reeds-team/cirrhosis-xgb-sweeps/runs/zl8h7um9</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 82%\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "wandb.login()\n",
     "\n",
     "# specify the sweep, the training function, and the number of sweeps\n",
-    "wandb.agent(sweep_id, train, count=25)"
+    "wandb.agent(sweep_id, train, count=200)"
    ]
   },
   {
@@ -495,9 +259,7 @@
    "source": [
     "# to-do\n",
     "\n",
-    "1. make early stopping and n_estimators work\n",
-    "    1. needs so refactoring between which args go in the constructor vs. the train method.\n",
-    "2. cross-validation"
+    "- [] switch wandb metric from accuracy to val loss. Seems like the config's metric and the one logged using wandb.log() need to be the same.\n"
    ]
   }
  ],
