refining the hyperparameter sweep

--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -180,18 +180,18 @@
     "            \"value\": 'gbtree'\n",
     "        },\n",
     "        \"max_depth\": { # depth of individual trees\n",
-    "            \"values\": [3, 6, 9, 12]\n",
+    "            \"values\": [5, 6, 7]\n",
     "        },\n",
     "        \"learning_rate\": {\n",
     "            'distribution': 'uniform',\n",
-    "            'min': 0,\n",
-    "            'max': .1,\n",
+    "            'min': .04,\n",
+    "            'max': .09,\n",
     "        },\n",
-    "        #\"subsample\": { # the proportion of instances to take as a sub-sample per iteration\n",
-    "        #    'distribution': 'uniform',\n",
-    "        #    'min': .33,\n",
-    "        #    'max': 1\n",
-    "        #}\n",
+    "        \"subsample\": { # the proportion of instances to take as a sub-sample per iteration\n",
+    "            'distribution': 'uniform',\n",
+    "            'min': .33,\n",
+    "            'max': 1\n",
+    "        }\n",
     "    }\n",
     "}\n",
     "\n",
